--- a/Server/lib/package.json
+++ b/Server/lib/package.json
@@ -26,6 +26,12 @@
     "passport-kakao": "0.0.5",
     "passport-naver": "^1.0.6",
     "passport-twitter": "^1.0.4",
+	"passport-discord": "^0.1.3",
+	"passport-twitch": "^1.0.3",
+	"passport-github": "^1.1.0",
+	"passport-line": "0.0.4",
+	"passport-instagram": "^1.0.0",
+	"passport-spotify": "^1.1.0",
     "pg": "^6.1.2",
     "pg-escape": "^0.2.0",
     "pug": "^2.0.4",
